2003-01-09 Albert Chu <chu11@llnl.gov>

    * etc/ipmipower.dev: Added additional expressions that result
    in powerman returning an unknown state.
	
2003-12-22 Jim Garlick <garlick@llnl.gov>

    * etc/ibmh8.dev: Fixed regular expression bug in status_all script.

2003-12-22 Albert Chu <chu11@llnl.gov>

    * etc/ipmipower.dev: Removed "not discovered" as acceptable message to 
    indicate power is off.  Power status should be unknown.  Fixed regular 
    expression bug in status_all script.
	
2003-12-22 Jim Garlick <garlick@llnl.gov>

    * src/arglist.[ch]: Fixed thinko in arglist_get prototype.

2003-12-21 Jim Garlick <garlick@llnl.gov>

    * src/arglist.[ch]: New.  Pulled content from device.c and tried to
    abstract more effectively.  Make it possible to preserve order of
    arglist despite the use of a hash table for efficiency.

    * src/device.c, src/client.c: use new arglist interfaces.

    * : tag powerman-1-0-19-argval

2003-12-19 Jim Garlick <garlick@llnl.gov>

    * Makefile, powerman.spec, man/powerman.1: remove 'on' and 'off' sym links.

    * etc/README: added statement description.

    * powerman.spec: post scriptlet stops and restarts powerman, if it was
    running.
   
    * etc/powerman.dev: New.

2003-12-17 Jim Garlick <garlick@llnl.gov>

    * src/device.c: remove _verify_plugassign (hold over from when we had
    setplugname commands in scripts).

    * src/device_pipe.c: assert no string overflow from forkpty().

2003-12-08 Jim Garlick <garlick@llnl.gov>

    * etc/vpc.dev: implement status_all, on_all, off_all, and cycle_all
    for efficiency.

    * src/device.c, src/powermand.c, src/wrappers.c: introduce poll debugging
    code and fix bug where poll loop would spin when poll returned errors
    on devices.

    * src/device.c: rewrite dev_post_poll() for clarity.

    * src/device_pipe.c, Makefile: use openpty() from -lutil instead of local
    pty_open.  This gets pty allocation right once and for all.
